--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<h3>Terapia Individual</h3>
 				<p class="bloco-txt">Atendimento individual com base na abordagem Cognitiva Comportamental.</p>
 				<button class="botao-bloco">Entre em contato<img class="botao-botao"
-						src="./imagens/whatsappi.png"></button>
+						src="./imagens/whatsapp-pb.png"></button>
 			</div>
 			<div class="blocos">
 				<img class="icone-bloco" src="imagens/psychology-brown.png" width="180" height="51"
@@ -124,7 +124,7 @@
 					conflitos, abrindo espaço para uma comunicação mais reflexiva e assertiva, buscando um alinhamento
 					entre as expectativas do casal.</p>
 				<button class="botao-bloco">Entre em contato<img class="botao-botao"
-						src="./imagens/whatsappi.png"></button>
+						src="./imagens/whatsapp-pb.png"></button>
 			</div>
 		</div>
 	</div>
@@ -168,8 +168,9 @@
 	<div id="formulario">
 		<div class="conteudo-form">
 			<h2 class="txt-form">Antes de preencher a lista, veja algumas informações sobre a terapia: </h2>
+			<br>
 			<ol>
-				<li class="list-form">Os atendimentos são baseados na Terapia Cognitiva;</li>
+				<li class="list-form">Os atendimentos são baseados na Terapia Comportamental Cognitiva;</li>
 				<li class="list-form">Cada sessão tem duração de 50 minutos;</li>
 				<li class="list-form">As sessões podem ser semanais ou quinzenais, sendo recomendado, inicialmente, a
 					frequência semanal;</li>
@@ -177,8 +178,8 @@
 				<li class="list-form">As sessões são todas estruturadas, baseadas em objetivos e resolução de problemas;
 				</li>
 				<li class="list-form">Não atendo pessoas com menos de 18 anos de idade;</li>
-				<li class="list-form">Emito nota de todos atendimentos;</li>
-				<li class="list-form">Todo processo psicoterapêutico inicia-se com aceite de um contrato de prestação de
+				<li class="list-form">Emito recibo de todos atendimentos;</li>
+				<li class="list-form">Todo processo psicoterapêutico inicia-se com um contrato de prestação de
 					serviços;</li>
 				<li class="list-form">Para agendamento, solicito pagamento antecipado;</li>
 				<li class="list-form">Não divulgo valores aqui, por restrição do Código de Ética do Psicólogo;</li>
@@ -188,10 +189,12 @@
 			<div class="obs-form">
 				<p class="txt-form">Obs: Todos seus dados serão resguardados em sigilo, de acordo com o Art. 9° do
 					código de ética do psicólogo:</p>
-				<p class="txt-form">"É dever do psicólogo respeitar o sigilo profissional a fim de proteger,  por meio
+					<br>
+				<p class="txt-form"> <em>"É dever do psicólogo respeitar o sigilo profissional a fim de proteger,  por meio
 					da confidencialidade, a intimidade das pessoas, grupos ou organizações, a que tenha acesso no
-					exercício profissional." </p>
+					exercício profissional.</em>"</p>
 			</div>
+			
 			<img id="button-form" src="imagens/right-arrow-brown.png">
 		</div>
 		<div id="magicform" class="formularios">
@@ -238,11 +241,10 @@
 	<!------------- RODAPE ----------------->
 	<div class="rodape">
 		<div class="rodape-first">
-			<div class="logo-topo">
-				<span>GabrielleNavarro</span>
+			<div class="logo-rodape">
+				<span>Gabrielle Navarro</span>
 				<span>Psicóloga</span>
 			</div>
-			<p>adfk asfha asdbhakj dahdbajk dbad abda dasbd asd as dasb das db</p>
 		</div>
 		<div class="rodape-second">
 			<iframe class="mapa-rodape"
