--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	<link rel="stylesheet" type="text/css" href="css/normilaze.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/banner.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
+
 	<meta charset="utf-8">
 
 </head>
@@ -33,8 +37,8 @@
 			</div>
 			<ul class="menu-principal">
 				<li><a class="item__menu" href="#carousel">Home</a></li>
-				<li><a class="item__menu" href="#quem-sou">Quem Sou</a></li>
 				<li><a class="item__menu" href="#servicos">Serviços</a></li>
+				<li><a class="item__menu" href="#quem-sou">Quem Sou</a></li>
 				<li><a class="item__menu" href="#insta">Instagram</a></li>
 				<li><a class="item__menu" href="#formulario">Contato</a></li>
 			</ul>
@@ -116,7 +120,7 @@
 				<button class="botao-bloco">Entre em contato<img class="botao-botao"
 						src="./imagens/whatsapp-pb.png"></button>
 			</div>
-			<div class="blocos">
+			<div class="blocos2">
 				<img class="icone-bloco" src="imagens/psychology-brown.png" width="180" height="51"
 					alt="Serviços de Bloco 1" loading="lazy">
 				<h3>Terapia de casal</h3>
@@ -189,12 +193,13 @@
 			<div class="obs-form">
 				<p class="txt-form">Obs: Todos seus dados serão resguardados em sigilo, de acordo com o Art. 9° do
 					código de ética do psicólogo:</p>
-					<br>
-				<p class="txt-form"> <em>"É dever do psicólogo respeitar o sigilo profissional a fim de proteger,  por meio
-					da confidencialidade, a intimidade das pessoas, grupos ou organizações, a que tenha acesso no
-					exercício profissional.</em>"</p>
+				<br>
+				<p class="txt-form"> <em>"É dever do psicólogo respeitar o sigilo profissional a fim de proteger,  por
+						meio
+						da confidencialidade, a intimidade das pessoas, grupos ou organizações, a que tenha acesso no
+						exercício profissional.</em>"</p>
 			</div>
-			
+
 			<img id="button-form" src="imagens/right-arrow-brown.png">
 		</div>
 		<div id="magicform" class="formularios">
@@ -242,17 +247,12 @@
 	<div class="rodape">
 		<div class="rodape-first">
 			<div class="logo-rodape">
-				<span>Gabrielle Navarro</span>
-				<span>Psicóloga</span>
+				<span>Gabrielle Cristine Navarro dos Santos</span>
 			</div>
 		</div>
-		<div class="rodape-second">
-			<iframe class="mapa-rodape"
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3659.890902113018!2d-46.53582748538635!3d-23.464399463902886!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cef542f15b1ea9%3A0xb52096cda6d685cf!2sR.%20Dr.%20Miguel%20Vi%C3%AAira%20Ferreira%2C%2057%20-%20Jardim%20Zaira%2C%20Guarulhos%20-%20SP%2C%2007095-070!5e0!3m2!1spt-BR!2sbr!4v1647458755600!5m2!1spt-BR!2sbr"
-				width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-		</div>
+
 	</div>
-	
+
 
 	<!------------- FIM ----------------->
 
