--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="css/normilaze.css">
 	<link rel="stylesheet" type="text/css" href="./css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/banner.css">
+	<link rel="icon" type="image/png" sizes="32x32" href="imagens/logo-load-white.png">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Comic+Neue&display=swap" rel="stylesheet">
@@ -24,8 +25,8 @@
 
 	<div id="tela" class="tela-loading">
 		<span class="quadrado-loading"><span class="icone-loading">
-				<img src="imagens/logo-load.png">
-			</span></span>
+			<img src="imagens/logo-load.png">
+		</span></span>
 	</div>
 
 	<!------------- TOPO ------------------->
@@ -48,7 +49,7 @@
 	<div id="carousel">
 		<div class="carousel-inner">
 			<input class="carousel-open" type="radio" id="carousel-1" name="carousel" aria-hidden="true" hidden=""
-				checked="checked">
+			checked="checked">
 			<div class="carousel-item carousel-item--1">
 				<div class="texto-banner">
 					<div class="icone"><img class="icone-banner" src="imagens/psychology-brown.png"></div>
@@ -91,174 +92,192 @@
 			</ol>
 		</div>
 	</div>
+	<!------------- BANNER 2----------------->
+
 	<!------------- SERVICOS ----------------->
 	<div id="servicos">
 		<div class="servicos-tcc">
 			<h2 class="titulo-tcc">TCC (Terapia Cognitiva Comportamental)</h2>
 			<p class="tcc">
-			<ul>
-				<li class="list-serv">Orientada para os objetivos e focada nos problemas.</li>
-				<li class="list-serv">Enfatiza a colaboração e a participação ativa (trabalho em equipe).</li>
-				<li class="list-serv">É uma abordagem educativa, tem como objetivo ensinar o paciente a ser seu próprio
-					terapeuta.
-				<li class="list-serv">Usa uma variada lista de técnicas para mudar o pensamento, o humor e o
-					comportamento.</li>
-				<li class="list-serv">Monitora continuamente o processo do cliente.</li>
-				<li class="list-serv">Inclui planos de ação ("tarefas de casa").</li>
-			</ul>
-			</p>
-			<p class="tcc-txt">Mais de 2.000 de estudos científico comprovam a eficácia da TCC para diversos
+				<ul>
+					<li class="list-serv">Orientada para os objetivos e focada nos problemas.</li>
+					<li class="list-serv">Enfatiza a colaboração e a participação ativa (trabalho em equipe).</li>
+					<li class="list-serv">É uma abordagem educativa, tem como objetivo ensinar o paciente a ser seu próprio
+						terapeuta.
+						<li class="list-serv">Usa uma variada lista de técnicas para mudar o pensamento, o humor e o
+						comportamento.</li>
+						<li class="list-serv">Monitora continuamente o processo do cliente.</li>
+						<li class="list-serv">Inclui planos de ação ("tarefas de casa").</li>
+					</ul>
+				</p>
+				<p class="tcc-txt">Mais de 2.000 de estudos científico comprovam a eficácia da TCC para diversos
 				diagnósticos.</p>
 
-		</div>
-		<div class="espaco-blocos">
-			<div class="blocos">
-				<img class="icone-bloco" src="imagens/psychology-brown.png" width="180" height="51"
+			</div>
+			<div class="espaco-blocos">
+				<div class="blocos">
+					<img class="icone-bloco" src="imagens/psychology-brown.png" width="180" height="51"
 					alt="Serviços de Bloco 1" loading="lazy">
-				<h3>Terapia Individual</h3>
-				<p class="bloco-txt">Atendimento individual com base na abordagem Cognitiva Comportamental.</p>
-				<button class="botao-bloco">Entre em contato<img class="botao-botao"
+					<h3>Terapia Individual</h3>
+					<p class="bloco-txt">Atendimento individual com base na abordagem Cognitiva Comportamental.</p>
+					<button class="botao-bloco">Entre em contato<img class="botao-botao"
 						src="./imagens/whatsapp-pb.png"></button>
-			</div>
-			<div class="blocos2">
-				<img class="icone-bloco" src="imagens/psychology-brown.png" width="180" height="51"
-					alt="Serviços de Bloco 1" loading="lazy">
-				<h3>Terapia de casal</h3>
-				<p class="bloco-txt">Modalidade focada no casal, com o objetivo de contribuir com a resolução de
-					conflitos, abrindo espaço para uma comunicação mais reflexiva e assertiva, buscando um alinhamento
-					entre as expectativas do casal.</p>
-				<button class="botao-bloco">Entre em contato<img class="botao-botao"
-						src="./imagens/whatsapp-pb.png"></button>
-			</div>
-		</div>
-	</div>
-
-	<!------------- QUEM SOU ----------------->
-
-	<div id="quem-sou">
-		<div class="quem-img"></div>
-		<div class="quem-txt">
-			<h1>Sobre mim...</h1>
-			<div>
-				<p class="txt-sobre"> Me chamo Gabrielle Navarro, tenho 22 anos e sou psicóloga (CRP:     )graduada na
-					Universidade de Guarulhos (UnG) no ano de 2021.2.</p>
-
-				<p class="txt-sobre">Atendo pacientes maiores de idade, de forma online e presencial, com base na
-					abordagem psicológica Cognitiva comportamental desde 2022.</p>
-			</div>
-
-			<h2>Principais demandas:</h2>
-
-			<div class="principais-demandas">
-				<ol>
-					<li class="list-sobre">Ansiedade</li>
-					<li class="list-sobre">Depressão</li>
-					<li class="list-sobre">Terapia de casal</li>
-					<li class="list-sobre">Autoconhecimento</li>
-					<li class="list-sobre">Desenvolvimento pessoal</li>
-					<li class="list-sobre">Entre outras...</li>
-				</ol>
-			</div>
-		</div>
-	</div>
-
-	<!------------- INSTAGRAM ----------------->
-	<div id="insta">
-		<div data-mc-src="3befce34-6356-4da9-a48a-15b6797da70c#instagram"></div>
-		<script src="https://cdn2.woxo.tech/a.js#62321b84b1ec2a0021f9c042" async data-usrc></script>
-		<div class="tanpom"></div>
-	</div>
-	<!------------- FORMULARIO ----------------->
-	<div id="formulario">
-		<div class="conteudo-form">
-			<h2 class="txt-form">Antes de preencher a lista, veja algumas informações sobre a terapia: </h2>
-			<br>
-			<ol>
-				<li class="list-form">Os atendimentos são baseados na Terapia Comportamental Cognitiva;</li>
-				<li class="list-form">Cada sessão tem duração de 50 minutos;</li>
-				<li class="list-form">As sessões podem ser semanais ou quinzenais, sendo recomendado, inicialmente, a
-					frequência semanal;</li>
-				<li class="list-form">Os atendimentos são realizados na modalidade presencial ou online;</li>
-				<li class="list-form">As sessões são todas estruturadas, baseadas em objetivos e resolução de problemas;
-				</li>
-				<li class="list-form">Não atendo pessoas com menos de 18 anos de idade;</li>
-				<li class="list-form">Emito recibo de todos atendimentos;</li>
-				<li class="list-form">Todo processo psicoterapêutico inicia-se com um contrato de prestação de
-					serviços;</li>
-				<li class="list-form">Para agendamento, solicito pagamento antecipado;</li>
-				<li class="list-form">Não divulgo valores aqui, por restrição do Código de Ética do Psicólogo;</li>
-				<li class="list-form">Os valores são baseados nas médias da Tabela de Honorários do Conselho Federal de
-					Psicologia;</li>
-			</ol>
-			<div class="obs-form">
-				<p class="txt-form">Obs: Todos seus dados serão resguardados em sigilo, de acordo com o Art. 9° do
-					código de ética do psicólogo:</p>
-				<br>
-				<p class="txt-form"> <em>"É dever do psicólogo respeitar o sigilo profissional a fim de proteger,  por
-						meio
-						da confidencialidade, a intimidade das pessoas, grupos ou organizações, a que tenha acesso no
-						exercício profissional.</em>"</p>
-			</div>
-
-			<img id="button-form" src="imagens/right-arrow-brown.png">
-		</div>
-		<div id="magicform" class="formularios">
-			<form class="form-form" action="/action_page.php">
-				<label class="form-label" for="name">Nome:
-					<input class="campo-form" type="text" id="name" name="name" value="">
-				</label>
-
-				<label class="form-label" for="idade">Idade:
-					<input class="campo-form" type="number" id="idade" name="idade" value="">
-				</label>
-
-				<label class="form-label" for="motivo">O que o motivou a procurar terapia?
-					<input class="campo-form" type="text" id="motivo" name="motivo" value="">
-				</label>
-
-				<label class="form-label" for="whats">WhatsApp para contato:
-					<input class="campo-form" type="tel" id="whats" name="whats" value="">
-				</label>
-
-				<label class="form-label" for="email"> E-mail para contato:
-					<input class="campo-form" type="email" id="email" name="email" value="">
-				</label>
-
-				<label class="form-label" for="date">Dias e horários disponíveis para sessões:
-					<input class="campo-form" type="date" id="date" name="date" value="">
-				</label>
-
-				<label class="form-label" for="preference">Preferência para sessões presenciais ou online?
-					<div>
-						<input class="" type="radio" id="preference" name="preference" value="Online">Online
-						<input class="" type="radio" id="preference" name="preference" value="Presencial">Presencial
 					</div>
-				</label>
+					<div class="blocos2">
+						<img class="icone-bloco" src="imagens/psychology-brown.png" width="180" height="51"
+						alt="Serviços de Bloco 1" loading="lazy">
+						<h3>Terapia de casal</h3>
+						<p class="bloco-txt">Modalidade focada no casal, com o objetivo de contribuir com a resolução de
+							conflitos, abrindo espaço para uma comunicação mais reflexiva e assertiva, buscando um alinhamento
+						entre as expectativas do casal.</p>
+						<button class="botao-bloco">Entre em contato<img class="botao-botao"
+							src="./imagens/whatsapp-pb.png"></button>
+						</div>
+					</div>
+				</div>
 
-				<label class="form-label" for="moreinfo">Mais alguma informação que você acha importante que eu saiba?:
-					<textarea class="campo-form" type="text" id="moreinfo" name="moreinfo" value=""></textarea></label>
-				<input class="submit-form" type="submit" value="Submit">
-			</form>
+				<!------------- QUEM SOU ----------------->
 
-		</div>
-		<img class="imagemform" src="imagens/formpic.gif">
-	</div>
-	<!------------- RODAPE ----------------->
-	<div class="rodape">
-		<div class="rodape-first">
-			<div class="logo-rodape">
-				<span>Gabrielle Cristine Navarro dos Santos</span>
-			</div>
-		</div>
+				<div id="quem-sou">
+					<div class="quem-img"></div>
+					<div class="quem-txt">
+						<h1>Sobre mim...</h1>
+						<div>
+							<p class="txt-sobre"> Me chamo Gabrielle Navarro, tenho 22 anos e sou psicóloga (CRP:     )graduada na
+							Universidade de Guarulhos (UnG) no ano de 2021.2.</p>
 
-	</div>
+							<p class="txt-sobre">Atendo pacientes maiores de idade, de forma online e presencial, com base na
+							abordagem psicológica Cognitiva comportamental desde 2022.</p>
+						</div>
+
+						<h2>Principais demandas:</h2>
+
+						<div class="principais-demandas">
+							<ol>
+								<li class="list-sobre">Ansiedade</li>
+								<li class="list-sobre">Depressão</li>
+								<li class="list-sobre">Terapia de casal</li>
+								<li class="list-sobre">Autoconhecimento</li>
+								<li class="list-sobre">Desenvolvimento pessoal</li>
+								<li class="list-sobre">Entre outras...</li>
+							</ol>
+						</div>
+					</div>
+				</div>
+
+				<!------------- INSTAGRAM ----------------->
+				<div id="insta">
+					<div data-mc-src="3befce34-6356-4da9-a48a-15b6797da70c#instagram"></div>
+					<script src="https://cdn2.woxo.tech/a.js#62321b84b1ec2a0021f9c042" async data-usrc></script>
+					<div class="tanpom"></div>
+				</div>
+				<!------------- FORMULARIO ----------------->
+				<div id="formulario">
+					<div class="conteudo-form">
+						<h2 class="txt-form">Antes de preencher a lista, veja algumas informações sobre a terapia: </h2>
+						<br>
+						<ol>
+							<li class="list-form">Os atendimentos são baseados na Terapia Comportamental Cognitiva;</li>
+							<li class="list-form">Cada sessão tem duração de 50 minutos;</li>
+							<li class="list-form">As sessões podem ser semanais ou quinzenais, sendo recomendado, inicialmente, a
+							frequência semanal;</li>
+							<li class="list-form">Os atendimentos são realizados na modalidade presencial ou online;</li>
+							<li class="list-form">As sessões são todas estruturadas, baseadas em objetivos e resolução de problemas;
+							</li>
+							<li class="list-form">Não atendo pessoas com menos de 18 anos de idade;</li>
+							<li class="list-form">Emito recibo de todos atendimentos;</li>
+							<li class="list-form">Todo processo psicoterapêutico inicia-se com um contrato de prestação de
+							serviços;</li>
+							<li class="list-form">Para agendamento, solicito pagamento antecipado;</li>
+							<li class="list-form">Não divulgo valores aqui, por restrição do Código de Ética do Psicólogo;</li>
+							<li class="list-form">Os valores são baseados nas médias da Tabela de Honorários do Conselho Federal de
+							Psicologia;</li>
+						</ol>
+						<div class="obs-form">
+							<p class="txt-form">Obs: Todos seus dados serão resguardados em sigilo, de acordo com o Art. 9° do
+							código de ética do psicólogo:</p>
+							<br>
+							<p class="txt-form"> <em>"É dever do psicólogo respeitar o sigilo profissional a fim de proteger,  por
+								meio
+								da confidencialidade, a intimidade das pessoas, grupos ou organizações, a que tenha acesso no
+							exercício profissional.</em>"</p>
+						</div>
+
+						<img id="button-form" src="imagens/right-arrow-brown.png">
+					</div>
+					<div id="magicform" class="formularios">
+						<form class="form-form" action="mailto:psi.gabriellenavarro@gmail.com">
+							<label class="form-label" for="name">Nome:
+								<input class="campo-form" type="text" id="name" name="name" value="" required="name">
+							</label>
+
+							<label class="form-label" for="idade">Idade:
+								<input class="campo-form" type="number" id="idade" name="idade" value="" required="years">
+							</label>
+
+							<label class="form-label" for="motivo">O que o motivou a procurar terapia?
+								<input class="campo-form" type="text" id="motivo" name="motivo" value="" required="">
+							</label>
+
+							<label class="form-label" for="whats">WhatsApp para contato:
+								<input class="campo-form" type="tel" id="whats" name="whats" value="" required="whats">
+							</label>
+
+							<label class="form-label" for="email"> E-mail para contato:
+								<input class="campo-form" type="email" id="email" name="email" value="" required="email">
+							</label>
+
+							<label class="form-label" for="date">Dias e horários disponíveis para sessões:
+								<input class="campo-form" type="date" id="date" name="date" value="" required="date">
+							</label>
+
+							<label class="form-label" for="preference" required >Preferência para sessões presenciais ou online?
+								<div>
+									<input class="" type="radio" id="preference" name="preference" value="Online">Online
+									<input class="" type="radio" id="preference" name="preference" value="Presencial">Presencial
+								</div>
+							</label>
+
+							<label class="form-label" for="moreinfo">Mais alguma informação que você acha importante que eu saiba?:
+								<textarea class="campo-form" type="text" id="moreinfo" name="moreinfo" value=""></textarea></label>
+								<input class="submit-form" type="submit" value="Submit">
+							</form>
+
+						</div>
+						<img class="imagemform" src="imagens/formpic.gif">
+					</div>
+					<!------------- RODAPE ----------------->
+					<div class="rodape">
+						<div class="rodape-first">
+							<div class="logo-rodape">
+								<span>Gabrielle Cristine Navarro dos Santos</span>
+							</div>
+						</div>
+
+						<a href="https://api.whatsapp.com/send?phone=5511992072492&text=Olá,%20estou%20entrando%20em%20contato%20via%20site%20para%20saber%20mais%20informações%20sobre%20orçamentos!">
+
+							<div class="whatsapp-icon">
+								<img src="imagens/whatsappi.png" width="40" height="40" title="Entre em contato diretamente pelo Whatsapp" alt="whatsapp-imagem" loading="lazy" class="img-whats">
+
+								<div class="animated infinite zoomIn whatsapp-animate-circulo-pulse"></div>
+
+								<div class="animated infinite tada whatsapp-btn-config"></div>
+							</div>						
+						</a>
+					</div>
+
+					<div class="direitos">
+						<div class="copyright">
+							<div class="direito-1">2022 - Este site está protegido pela Lei de Direitos Autorais. (Lei 9610 de 19/02/1998), sua reprodução total ou parcial é proibida nos termos da Lei.</div>
+						</div>
+					</div>
 
 
-	<!------------- FIM ----------------->
+					<!------------- FIM ----------------->
 
 
-	<script src="js/javascript.js" type="text/javascript"></script>
+					<script src="js/javascript.js" type="text/javascript"></script>
 
-</body>
+				</body>
 
-</html>
+				</html>
